--- a/SCSS/estilos.css
+++ b/SCSS/estilos.css
@@ -6,6 +6,11 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 /********** Variables **********/
 /********** NavBar Bootstrap **********/
 .encabezado__texto {
@@ -154,6 +159,7 @@ body {
   font-size: 30px;
   font-weight: bold;
   margin-top: 0px;
+  margin-bottom: 40px;
   background-color: rgba(0, 0, 0, 0.233);
   padding: 20px;
 }
@@ -229,13 +235,13 @@ section {
 
 .subir_boton {
   background-image: radial-gradient(circle, #c9c9cf, #a8a8af, #888890, #696972, #4c4c56);
-  bottom: 60px;
+  bottom: 100px;
   box-shadow: 0 0 5px 5px grey;
 }
 
 .whatsapp_boton {
   background-image: radial-gradient(circle, rgb(63, 251, 186) 0%, rgb(70, 252, 103) 100%);
-  bottom: 120px;
+  bottom: 160px;
   box-shadow: 0 0 5px 5px rgb(90, 133, 79);
 }
 
@@ -258,7 +264,7 @@ section {
   height: auto;
   padding-top: 16px;
   padding-left: 16px;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 .pie__redes {
@@ -331,6 +337,10 @@ section {
     font-size: 20px;
     line-height: 30px;
   }
+  .pie {
+    position: absolute;
+    bottom: 0;
+  }
 }
 @media only screen and (min-width: 1170px) {
   .encabezado {
@@ -376,6 +386,10 @@ section {
   .cuerpo__foto2 {
     grid-column: 1/2;
     grid-row: 2/3;
+  }
+  .pie {
+    position: absolute;
+    bottom: 0;
   }
 }
 /*********** Animaciones ***********/
