--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -7,6 +7,11 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
+html{
+    position: relative;
+    min-height: 100%;
+}
+
 /********** Variables **********/
 $sombra_texto_blanca: 0px 0px 30px white;
 $sombra_interna_boton_1: inset 0 0 10px black;
@@ -173,6 +178,7 @@ body {
     font-size: 30px;
     font-weight: bold;
     margin-top: 0px;
+    margin-bottom: 40px;
     background-color: rgba(0, 0, 0, 0.233);
     padding: 20px;
 }
@@ -251,14 +257,14 @@ section {
 .subir_boton {
     @extend .botones_flotantes;
     background-image: radial-gradient(circle, #c9c9cf, #a8a8af, #888890, #696972, #4c4c56);
-    bottom: 60px;
+    bottom: 100px;
     box-shadow: 0 0 5px 5px grey;
 }
 
 .whatsapp_boton {
     @extend .botones_flotantes;
     background-image: radial-gradient(circle, rgba(63, 251, 186, 1) 0%, rgba(70, 252, 103, 1) 100%);
-    bottom: 120px;
+    bottom: 160px;
     box-shadow: 0 0 5px 5px rgb(90, 133, 79);
 }
 
@@ -294,7 +300,7 @@ section {
     height: auto;
     padding-top: 16px;
     padding-left: 16px;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .pie__redes {
@@ -381,6 +387,11 @@ section {
         font-size: 20px;
         line-height: 30px;
     }
+
+    .pie {
+        position: absolute;
+        bottom: 0;
+    }
 }
 
 @media only screen and (min-width:1170px) {
@@ -434,6 +445,10 @@ section {
             grid-column: #{$j}/#{$j+1};
             grid-row: #{$i}/#{$i+1};
         }
+    }
+    .pie {
+        position: absolute;
+        bottom: 0;
     }
 }
 
