--- a/SCSS/estilos.css
+++ b/SCSS/estilos.css
@@ -256,6 +256,12 @@ section {
 }
 
 /*********** Elementos Footer ***********/
+footer {
+  position: relative;
+  top: 20vh;
+  height: 10vh;
+}
+
 .pie {
   display: flex;
   flex-wrap: nowrap;
@@ -269,6 +275,7 @@ section {
 
 .pie__redes {
   width: 40vw;
+  text-align: center;
 }
 .pie__redes a {
   color: white;
@@ -283,7 +290,7 @@ section {
 }
 
 /*********** Media Queries ***********/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 780px) {
   .encabezado {
     grid-template-columns: 150px auto;
     grid-template-rows: auto auto;
@@ -310,7 +317,7 @@ section {
     text-align: center;
   }
   .pie__redes {
-    width: 50vw;
+    width: 70vw;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1170px) {
@@ -336,10 +343,6 @@ section {
   .encabezado__texto_logo {
     font-size: 20px;
     line-height: 30px;
-  }
-  .pie {
-    position: absolute;
-    bottom: 0;
   }
 }
 @media only screen and (min-width: 1170px) {
@@ -386,10 +389,6 @@ section {
   .cuerpo__foto2 {
     grid-column: 1/2;
     grid-row: 2/3;
-  }
-  .pie {
-    position: absolute;
-    bottom: 0;
   }
 }
 /*********** Animaciones ***********/
