--- a/SCSS/estilos.scss
+++ b/SCSS/estilos.scss
@@ -110,10 +110,12 @@ $relleno_degradado: linear-gradient(to top, #9f99a3, #89858f, #74717c, #605e69, 
     grid-column: 1/2;
     grid-row: 1/2;
 
-    :hover {
-        filter: opacity(0.5);
-        transition-duration: 0.5s;
-    }
+    
+}
+
+.encabezado__logo:hover {
+    filter: opacity(0.5);
+    transition-duration: 0.5s;
 }
 
 .encabezado__imagen {
@@ -164,7 +166,8 @@ $relleno_degradado: linear-gradient(to top, #9f99a3, #89858f, #74717c, #605e69, 
 
 body {
     background-image: url(../Assets/fondo.jpg);
-    background-size: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
 }
 
 .cuerpo {
